--- a/Server/package.json
+++ b/Server/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js --exec babel-node --presets es2015,stage-2"
   },
   "dependencies": {
     "babel-preset-node6": "^11.0.0",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "deep-map": "^1.5.0",
     "express": "^4.16.2",
     "firebase": "^4.6.1",
@@ -16,10 +17,13 @@
     "geolib": "^2.0.24",
     "gps-distance": "^0.0.4",
     "lodash": "^4.17.4",
-    "mongodb": "^2.2.33"
+    "mongodb": "^2.2.33",
+    "nodemailer": "^4.4.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "nodemon": "^1.12.1"
   }
 }
