--- a/Admin/package.json
+++ b/Admin/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.17.1",
     "chordsheetjs": "^1.0.4",
     "firebase": "^4.6.2",
+    "grunt-cli": "^1.2.0",
     "node-emoji": "^1.8.1",
     "nodemailer": "^4.4.0",
     "normalize": "^0.3.1",
@@ -15,6 +16,7 @@
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-dragula": "^1.1.17",
     "react-places-autocomplete": "^5.4.3",
     "react-router-dom": "^4.1.1"
   },
