--- a/Admin/package.json
+++ b/Admin/package.json
@@ -7,6 +7,7 @@
     "@blueprintjs/table": "^1.30.0",
     "axios": "^0.17.1",
     "chordsheetjs": "^1.0.4",
+    "cors": "^2.8.4",
     "firebase": "^4.6.2",
     "grunt-cli": "^1.2.0",
     "node-emoji": "^1.8.1",
