Reworked beer list and Drag&Drop

--- a/Admin/package.json
+++ b/Admin/package.json
@@ -9,6 +9,7 @@
     "chordsheetjs": "^1.0.4",
     "cors": "^2.8.4",
     "firebase": "^4.6.2",
+    "flexboxgrid": "^6.3.1",
     "grunt-cli": "^1.2.0",
     "node-emoji": "^1.8.1",
     "nodemailer": "^4.4.0",
