--- a/Admin/package.json
+++ b/Admin/package.json
@@ -11,6 +11,7 @@
     "firebase": "^4.6.2",
     "flexboxgrid": "^6.3.1",
     "grunt-cli": "^1.2.0",
+    "jquery": "^3.2.1",
     "node-emoji": "^1.8.1",
     "nodemailer": "^4.4.0",
     "normalize": "^0.3.1",
