--- a/Bot/package.json
+++ b/Bot/package.json
@@ -7,6 +7,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "bluebird": "^3.5.1",
+    "botanio": "^0.0.6",
     "config": "^1.27.0",
     "lodash": "^4.17.4",
     "node-emoji": "^1.8.1",
